update contact and add new background image

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,8 +54,10 @@
       <section class="contact">
         <div class="container grid">
           <h2>Informatii generale</h2>
-          <p>Nu ai găsit ce căutai sau te putem ajuta și cu alte informații referitoare la programele de pregătire IT School? Suntem aici să te ajutăm. Îți reamintim că pe pagina FAQ regăsești o listă cu cele mai frecvente întrebări.</p>
-          <p>Ne poți găsi la:</p>
+          <p class="main-paragraph">
+            Nu ai găsit ce căutai sau te putem ajuta și cu alte informații referitoare la programele de pregătire IT School? Suntem aici să te ajutăm. Îți reamintim că pe pagina FAQ regăsești o listă cu cele mai frecvente întrebări.
+          </p>
+          <p class="main-paragraph">Ne poți găsi la:</p>
           <div class="contact-wrapper">
             <ul>
               <li>
@@ -70,7 +72,6 @@
                 <p><span class="material-symbols-outlined"> public </span> Facebook:</p>
                 <a href="https://www.facebook.com/itschool.ro/"> ITSchool</a>
               </li>
-              <!--  -->
               <li>
                 <p><span class="material-symbols-outlined"> schedule </span> Program:</p>
                 <p class="description">Luni - Vineri, de la 10:00 - 18:00</p>
@@ -83,13 +84,13 @@
                 <p class="description">Timișoara</p>
               </li>
             </ul>
-            <!-- form -->
+
             <form action="" method="post" class="contact-form">
               <label for="name">Nume Prenume: </label>
               <input type="text" id="name" placeholder="ex: Harry Potter " />
 
               <label for="email">Email: </label>
-              <input type="email" id="email" placeholder="ex: harrypotter@gmail.com" />
+              <input type="email" id="email" placeholder="ex: example@gmail.com" />
 
               <label for="phone">Telefon: </label>
               <input type="tel" id="phone" placeholder="0712 345 678" />
