Homework 20-21 - Refactor dropdown from CSS to JS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         </a>
         <div class="menu-icon-container">
           <span class="material-symbols-outlined menu-icon"> menu </span>
-          <input type="checkbox" />
           <ul>
             <li>
               <a href="pages/courses.html"> Cursuri Online </a>
@@ -247,5 +246,7 @@
         <p>IT School România © 2021. Toate drepturile rezervate.</p>
       </div>
     </footer>
+    <!-- JS -->
+    <script src="script.js"></script>
   </body>
 </html>
