--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,6 @@
         </a>
         <div class="menu-icon-container">
           <span class="material-symbols-outlined menu-icon"> menu </span>
-          <input type="checkbox" />
           <ul>
             <li>
               <a href="courses.html"> Cursuri Online </a>
@@ -110,5 +109,7 @@
         <p>IT School România © 2021. Toate drepturile rezervate.</p>
       </div>
     </footer>
+    <!-- JS -->
+    <script src="../script.js"></script>
   </body>
 </html>
